--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,12 @@
 {
   "trailingComma": "all",
   "semi": false,
+  "useTabs": false,
   "tabWidth": 2,
   "singleQuote": true,
-  "printWidth": 80,
+  "printWidth": 120,
   "endOfLine": "auto",
   "arrowParens": "always",
+  "bracketSpacing": true,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
