--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^10.1.8",
     "glslify": "^7.1.1",
     "glslify-loader": "^2.0.0",
+    "leva": "^0.10.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "raw-loader": "^4.0.2",
